# ProbRobotDeepRL

./: .gitignore  LICENSE  README.md  grid_search.py  main.py  model.py  model1.py  model_cnn.py  model_mini.py  ppo_agent.py  pyproject.toml  requirements_conda.txt  requirements_pip.txt  trpo_agent.py
environment/: __init__.py  ball.py  plane.py  register.py  sham_test_env.py  simple_turtle_rl_env.py  turtle_rl_env.py  turtlebot.py  walls.py
environment/structures/: box.urdf  large_ball.urdf  plane.urdf  wall-long.urdf  wall-short.urdf  wall.urdf
